更新&修正 標籤翻譯

--- a/nHentai-Enhanced/lang/zh_TW.json
+++ b/nHentai-Enhanced/lang/zh_TW.json
@@ -98,8 +98,10 @@
         "balls expansion": "膨脹的睪丸",
         "bandages": "繃帶",
         "bandaid": "OK繃、創可貼",
+        "bbm": "肥男",
         "bdsm": "皮繩愉虐、綁縛性調教",
         "bear": "熊",
+        "beauty mark": "美人痣",
         "bee girl": "蜜蜂女孩",
         "bestiality": "獸姦",
         "big areolae": "大乳暈",
@@ -114,12 +116,14 @@
         "bike shorts": "緊身短褲",
         "bikini": "比基尼",
         "birth": "出產",
+        "bisexual": "雙性戀",
         "blackmail": "恐嚇",
         "blind": "失明",
         "blindfold": "蒙眼",
         "blood": "血",
         "bloomers": "燈籠褲",
         "blowjob": "口交",
+        "blowjob face": "口交臉",
         "body modification": "肉體改造",
         "body painting": "人體彩繪",
         "body swap": "身體交換",
@@ -153,6 +157,8 @@
         "chinese dress": "旗袍",
         "chloroform": "迷姦",
         "christmas": "聖誕",
+        "clamp": "夾鉗",
+        "clothed female nude male": "穿著衣服的女性與裸體的男性",
         "coach": "教練",
         "cockslapping": "甩搧龜頭",
         "collar": "項圈",
@@ -167,6 +173,7 @@
         "cowgirl": "女牛仔",
         "cowman": "牛男",
         "crossdressing": "偽娘",
+        "crotch tattoo": "胯下紋身",
         "cum in eye": "對眼部射精",
         "cum swap": "精液交換",
         "cunnilingus": "舔鮑",
@@ -187,6 +194,7 @@
         "dog": "狗",
         "doll joints": "有關節的公仔",
         "dolphin": "海豚",
+        "domination loss": "失去主控權",
         "double anal": "一肛兩棒",
         "double blowjob": "吃雙屌",
         "double penetration": "兩根同時插入",
@@ -211,23 +219,25 @@
         "females only": "只有女性",
         "femdom": "女調教男",
         "feminization": "女性化",
-        "ffm threesome": "兩女一男3",
+        "ffm threesome": "兩女一男",
         "fft threesome": "兩女一扶他",
         "filming": "拍攝",
         "fingering": "指姦、手指插入",
         "first person perspective": "第一人稱視角",
         "fisting": "拳交",
+        "focus anal": "只有肛交",
         "foot insertion": "腳姦、足交（插入行為）",
         "foot licking": "舐足",
         "footjob": "足交（摩擦行為）",
         "forbidden content": "禁止內容（R18G、極端BDSM、幼童）",
         "forniphilia": "人體傢俱",
         "fox": "狐狸",
+        "fox girl": " 狐狸娘",
         "freckles": "雀斑",
         "frog": "青蛙",
         "frottage": "陰莖互相摩擦",
         "full body tattoo": "全身刺青",
-        "full censorship": "生殖器完全遮蓋的馬賽克",
+        "full censorship": "完整馬賽克",
         "full color": "全彩",
         "fundoshi": "褌、兜檔布",
         "furry": "擬人動物（美式）",
@@ -243,6 +253,7 @@
         "gijinka": "擬人化",
         "glasses": "眼鏡",
         "glory hole": "尋歡洞",
+        "gloves": "手套",
         "goblin": "哥布林",
         "gokkun": "吞精",
         "gorilla": "大猩猩",
@@ -262,8 +273,10 @@
         "handjob": "手淫",
         "hardcore": "激烈性交",
         "harem": "後宮",
+        "harness": "馬俱",
         "harpy": "鳥人",
         "hijab": "面紗",
+        "horns": "洞角",
         "horse": "馬",
         "horse cock": "馬屌",
         "hotpants": "熱褲",
@@ -284,6 +297,7 @@
         "invisible": "透明人間",
         "josou seme": "女裝的攻方",
         "kappa": "河童",
+        "kemonomimi": "獸耳",
         "kigurumi": "布偶裝",
         "kimono": "和服",
         "kissing": "接吻",
@@ -313,6 +327,7 @@
         "masked face": "蒙面",
         "masturbation": "自慰",
         "mature": "熟女",
+        "mecha girl": "機甲女孩",
         "menstruation": "月經",
         "mermaid": "美人魚",
         "merman": "人魚",
@@ -352,6 +367,7 @@
         "nipple birth": "乳頭出生",
         "nipple expansion": "乳頭增大",
         "nipple fuck": "乳頭抽插",
+        "no penetration": "沒有插入",
         "non nude": "非裸體",
         "nose fuck": "鼻孔抽插",
         "nose hook": "鼻鉤",
@@ -361,12 +377,14 @@
         "oil": "潤滑劑、黏液、油",
         "old lady": "老女人",
         "old man": "老人",
+        "omorashi": "漏尿",
         "onahole": "自慰套",
         "oni": "日本惡鬼",
         "oppai loli": "胸部已發育之羅莉",
         "orc": "半獸人",
         "orgasm denial": "射精禁止",
         "out of order": "篇幅不按順序、順序錯亂",
+        "oyakodon": "親子丼",
         "paizuri": "乳交",
         "pantyhose": "連褲襪",
         "pantyjob": "隔著內褲摩擦生殖器",
@@ -381,11 +399,13 @@
         "piercing": "環姐",
         "pig": "豬",
         "pillory": "頸手枷",
+        "pirate": "海盜",
         "piss drinking": "飲尿",
         "pole dancing": "鋼管舞",
         "policeman": "男警",
         "policewoman": "女警",
         "ponygirl": "女性咬住馬銜的裝扮",
+        "ponytail": "馬尾",
         "poor grammar": "內容或語法有錯誤",
         "possession": "憑依",
         "pregnant": "懷孕、西瓜肚",
@@ -437,8 +457,9 @@
         "snake": "蛇",
         "snake girl": "蛇娘",
         "snuff": "被人造物、機械或野獸殺害",
-        "sole female": "作品中僅有一名女性角色",
-        "sole male": "作品中僅有一名男性角色",
+        "sole dickgirl": "只有有陰莖的女性",
+        "sole female": "只有女性",
+        "sole male": "只有男性",
         "solo action": "單獨活動",
         "spanking": "拍打屁股",
         "speculum": "內診器",
@@ -452,18 +473,21 @@
         "story arc": "長篇劇情作",
         "strap-on": "穿戴式假陽具",
         "stretching": "肉體擴張",
-        "stuck in wall": "嵌於牆壁",
-        "sumata": "素股",
+        "stuck in wall": "卡在牆上",
+        "sumata": "股交",
         "sundress": "背心裙",
         "sunglasses": "太陽眼鏡",
         "sweating": "流汗",
         "swimsuit": "泳裝",
         "syringe": "注射器、針筒",
         "table masturbation": "磨桌腳自慰",
+        "tail": "尾巴",
+        "tail plug": "肛塞",
         "tailjob": "用尾巴自慰或作愛",
         "tankoubon": "單行本",
         "tanlines": "曬痕",
         "teacher": "教師",
+        "tentacles": "觸手",
         "thigh high boots": "過膝長筒靴",
         "tiara": "頭冠、皇冠",
         "tickling": "搔癢",
@@ -487,8 +511,9 @@
         "turtle": "烏龜",
         "tutor": "家教",
         "twins": "雙胞胎",
+        "twintails": "雙馬尾",
         "unbirth": "入腹",
-        "uncensored": "無碼",
+        "uncensored": " 無碼",
         "uncle": "叔叔",
         "underwater": "水下",
         "unicorn": "獨角獸",
@@ -499,10 +524,11 @@
         "vacbed": "橡膠真空床",
         "vaginal sticker": "陰道貼紙",
         "vampire": "吸血鬼",
-        "virginity": "破處（專指男性）",
+        "virginity": "破處（男性）",
         "vomit": "嘔吐",
         "vore": "吞食",
         "voyeurism": "偷窺癖",
+        "vtuber": "虛擬 YouTuber",
         "waiter": "男服務生",
         "waitress": "女服務生",
         "weight gain": "增加體重 ",
