--- a/nHentai-Enhanced/lang/zh_TW.json
+++ b/nHentai-Enhanced/lang/zh_TW.json
@@ -93,6 +93,7 @@
         "aunt": "阿姨",
         "autofellatio": "男性自我口交",
         "autopaizuri": "扶他自我乳交",
+        "bald": "白虎",
         "ball sucking": "舔蛋蛋",
         "balljob": "睪丸摩擦",
         "balls expansion": "膨脹的睪丸",
@@ -314,6 +315,7 @@
         "leotard": "緊身衣",
         "lingerie": "女性情趣內衣",
         "living clothes": "家居服",
+        "lizard guy": "蜥蜴人",
         "lolicon": "蘿莉控",
         "long tongue": "長舌頭",
         "low bestiality": "低級的獸交",
@@ -325,6 +327,7 @@
         "maid": "女僕",
         "male on dickgirl": "男性插入有陰莖的女性",
         "males only": "只有男性",
+        "manga": "漫畫",
         "masked face": "蒙面",
         "masturbation": "自慰",
         "mature": "熟女",
@@ -440,6 +443,7 @@
         "selfcest": "自攻自受",
         "sex toys": "性玩具",
         "shared senses": "同感",
+        "shark girl": "鯊魚娘",
         "sheep": "羊",
         "shemale": "擁有陰莖但沒有陰道的女性",
         "shibari": "繩縛",
@@ -454,10 +458,11 @@
         "slug": "軟體動物",
         "small breasts": "貧乳",
         "smegma": "恥垢、包皮垢",
+        "smell": "體味",
         "smoking": "抽菸",
         "snake": "蛇",
         "snake girl": "蛇娘",
-        "snuff": "被人造物、機械或野獸殺害",
+        "snuff": "殺害",
         "sole dickgirl": "只有有陰莖的女性",
         "sole female": "只有女性",
         "sole male": "只有男性",
@@ -471,7 +476,7 @@
         "stewardess": "乘服員",
         "stockings": "絲襪、過膝襪",
         "stomach deformation": "腹部變形",
-        "story arc": "長篇劇情作",
+        "story arc": "長篇劇情",
         "strap-on": "穿戴式假陽具",
         "stretching": "肉體擴張",
         "stuck in wall": "卡在牆上",
