--- a/nHentai-Enhanced/lang/zh_TW.json
+++ b/nHentai-Enhanced/lang/zh_TW.json
@@ -227,7 +227,7 @@
         "fingering": "指姦、手指插入",
         "first person perspective": "第一人稱視角",
         "fisting": "拳交",
-        "focus anal": "只有肛交",
+        "focus anal": "專注肛交",
         "foot insertion": "腳姦、足交（插入行為）",
         "foot licking": "舐足",
         "footjob": "足交（摩擦行為）",
@@ -463,9 +463,9 @@
         "snake": "蛇",
         "snake girl": "蛇娘",
         "snuff": "殺害",
-        "sole dickgirl": "只有有陰莖的女性",
-        "sole female": "只有女性",
-        "sole male": "只有男性",
+        "sole dickgirl": "一位有陰莖的女性",
+        "sole female": "一位女性",
+        "sole male": "一位男性",
         "solo action": "單獨活動",
         "spanking": "拍打屁股",
         "speculum": "內診器",
@@ -498,7 +498,7 @@
         "tiara": "頭冠、皇冠",
         "tickling": "搔癢",
         "tiger": "虎（貓科動物）",
-        "tights": "貼身襯衣、緊身衣",
+        "tights": "貼身襯衫、緊身衣",
         "time stop": "時間暫停",
         "tomboy": "女同志",
         "tomgirl": "女同性戀中仍扮演女方者",
