--- a/nHentai-Enhanced/lang/zh_TW.json
+++ b/nHentai-Enhanced/lang/zh_TW.json
@@ -186,6 +186,7 @@
         "defloration": "破處（女性）",
         "demon": "惡魔",
         "demon girl": "惡魔娘",
+        "deepthroat": "深喉嚨",
         "diaper": "尿布",
         "dick growth": "陰蒂陰莖化",
         "dickgirl on dickgirl": "有陰莖的女性角色",
@@ -201,6 +202,7 @@
         "double blowjob": "吃雙屌",
         "double penetration": "兩根同時插入",
         "dougi": "道服",
+        "doujinshi": "同人誌",
         "dragon": "龍",
         "drugs": "打藥",
         "drunk": "酒醉",
@@ -308,11 +310,13 @@
         "lab coat": "醫師白長袍",
         "lactation": "哺乳",
         "large insertions": "巨根",
+        "large tattoo": "紋身",
         "latex": "緊身皮衣、塑膠衣",
         "layer cake": "夾心鮑（兩鮑夾一棒）",
         "leg lock": "腿夾",
         "legjob": "腿部摩擦",
         "leotard": "緊身衣",
+        "leash": "項圈",
         "lingerie": "女性情趣內衣",
         "living clothes": "家居服",
         "lizard guy": "蜥蜴人",
@@ -538,6 +542,7 @@
         "waiter": "男服務生",
         "waitress": "女服務生",
         "weight gain": "增加體重 ",
+        "webtoon": "網路漫畫",
         "whip": "鞭笞",
         "widow": "寡婦、未亡人",
         "widower": "鰥夫",
