--- a/nHentai-Enhanced/lang/zh_TW.json
+++ b/nHentai-Enhanced/lang/zh_TW.json
@@ -452,6 +452,7 @@
         "shemale": "擁有陰莖但沒有陰道的女性",
         "shibari": "繩縛",
         "shimapan": "橫條紋內褲",
+        "shimaidon": "姉妹丼",
         "shotacon": "正太控",
         "shrinking": "人體縮小",
         "sister": "姊妹",
