--- a/nHentai-Enhanced/lang/zh_TW.json
+++ b/nHentai-Enhanced/lang/zh_TW.json
@@ -68,13 +68,22 @@
         }
     },
     "spanPage": {
-        "Parodie": "同人:",
-        "Character":"角色:",
-        "Tag": "標籤:",
-        "Artist": "畫師:",
-        "Group":"群組:",
-        "Language": "語言:",
-        "Categorie": "分類:"
+        "tags": {
+            "Parodie": "同人:",
+            "Character":"角色:",
+            "Tag": "標籤:",
+            "Artist": "畫師:",
+            "Group":"群組:",
+            "Language": "語言:",
+            "Categorie": "分類:"
+        },
+        "sort": {
+            "Recent": "最新",
+            "Popular": "熱門:",
+            "today": "今日",
+            "week": "這週",
+            "allTime": "所有時間"
+        }
     },
     "Tags": {
         "abortion": "墮胎",
