將 單頁閱讀 與 原版閱讀 分開

--- a/locales/zh_TW.json
+++ b/locales/zh_TW.json
@@ -33,7 +33,7 @@
             "Uploaded": "上傳時間:"
         },
         "Btns": {
-            "Read": "開始閱讀",
+            "Read": "單頁閱讀",
             "BTdownload": "BT 下載",
             "SerachRelatedBook": "搜尋相關本本"
         },
