--- a/locales/zh_TW.json
+++ b/locales/zh_TW.json
@@ -26,8 +26,8 @@
         "Info": "資訊",
         "Sign in": "登入",
         "Register": "註冊",
-        "Favroites": "最愛",
-        "LogOut": "登出"
+        "Favrorites": "最愛",
+        "Log out": "登出"
     },
     "Homepage": {
         "PopularNow": "當前熱門",
