--- a/locales/zh_TW.json
+++ b/locales/zh_TW.json
@@ -39,6 +39,7 @@
             "Read": "單頁閱讀",
             "BTdownload": "BT 下載",
             "Searching": "搜尋中",
+            "Nothing": "找不到啦，幹",
             "SerachRelatedBook": "搜尋相關本本"
         },
         "ShowMoreImagesButton": "顯示更多",
