--- a/locales/zh_TW.json
+++ b/locales/zh_TW.json
@@ -7,14 +7,14 @@
         "Parodies": "同人",
         "Groups": "群組",
         "Info": "資訊",
-        "Sign in": "<i class='fa fa-sign-in-alt'></i> 登入",
-        "Register": "<i class='fa fa-edit'></i> 註冊",
-        "Favorites": "<i class='fa fa-heart color-icon'></i> 最愛",
-        "Log out": "<i class='fa fa-sign-out-alt'></i> 登出"
+        "Sign in": " 登入",
+        "Register": " 註冊",
+        "Favorites": " 最愛",
+        "Log out": " 登出"
     },
     "Homepage": {
-        "Popular Now": "<i class='fa fa-fire color-icon'></i> 當前熱門",
-        "New Uploads": "<i class='fa fa-box-tissue color-icon'></i> 最新上傳"
+        "Popular Now": " 當前熱門",
+        "New Uploads": " 最新上傳"
     },
     "NewBook": {
         "Show all": "顯示更多",
