--- a/locales/zh_TW.json
+++ b/locales/zh_TW.json
@@ -435,9 +435,9 @@
         "ponygirl": "女性咬住馬銜的裝扮",
         "ponytail": "馬尾",
         "poor grammar": "內容或語法有錯誤",
-        "possession": "憑依",
+        "possession": "附身",
         "pregnant": "懷孕、西瓜肚",
-        "prehensile hair": "生體髮、觸手髮",
+        "prehensile hair": "觸手髮",
         "prolapse": "子宮或直腸脫垂",
         "prostate massage": "前列腺按摩",
         "prostitution": "賣淫、風俗",
